Tames Paralax offset, fixes overflow hidden

--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -169,6 +169,7 @@ ul.inline li {
     margin-top: 146px;
 }
 .panel {
+    position: relative;
 	padding:60px 20px 20px;
 	margin-bottom: 8px;
     overflow: hidden;
